--- a/style/styles.css
+++ b/style/styles.css
@@ -174,5 +174,8 @@ footer p {
     .imgexp p {
         width: 300px;
     }
-    
+    .imageDay h2 {
+        margin: 1rem 0 1rem 0;
+        padding-left: 20px;
+    }
 }
