--- a/style/styles.css
+++ b/style/styles.css
@@ -114,6 +114,7 @@ body {
     width: 500px;
     padding: 20px;
     font-size: 2.5rem;
+    text-align: justify;
 }
 .imageDay button {
     width: 100px;
